Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12114

install_db shows corruption for rest encryption and innodb_checksum_algorithm=strict_none

Details

    • 10.1.24

    Description

      When trying to install database with rest encryption and innodb_checksum_algorithm=strict_none following errors are shown:

      2017-02-23 12:16:40 139675033013184 [Warning] InnoDB: New log files created, LSN=45883
      2017-02-23 12:16:40 139675033013184 [Note] InnoDB: Doublewrite buffer not found: creating new
      2017-02-23 12:16:40 139675033013184 [Note] InnoDB: Doublewrite buffer created
      2017-02-23 12:16:40 139675033013184 [ERROR] InnoDB:  Page 2 in space N/A (0) maybe corrupted. Post encryption checksum 3735928559 stored [3735928559:3735928559] key_version 1
      2017-02-23 12:16:40 139675033013184 [ERROR] InnoDB:  Page 2 in space ./ibdata1 (0) maybe corrupted. Post encryption checksum 3735928559 stored [3735928559:3735928559] key_version 1
      2017-02-23 12:16:40 7f08a0ba0bc0  InnoDB: Assertion failure in thread 139675033013184 in file fsp0fsp.cc line 1765
      InnoDB: Failing assertion: n != ULINT_UNDEFINED
      ...
      mysys/stacktrace.c:268(my_print_stacktrace)[0x5629310fdf86]
      sql/signal_handler.cc:168(handle_fatal_signal)[0x5629311003d4]
      srv/srv0start.cc:2837(innobase_start_or_create_for_mysql())[0x5629310e810a]
      handler/ha_innodb.cc:4439(innobase_init(void*))[0x56293102633d]
      sql/handler.cc:513(ha_initialize_handlerton(st_plugin_int*))[0x562930defc75]
      sql/sql_plugin.cc:1408(plugin_initialize(st_mem_root*, st_plugin_int*, int*, char**, bool))[0x562930c943ab]
      sql/sql_plugin.cc:1678(plugin_init(int*, char**, int))[0x562930c952c2]
      sql/mysqld.cc:5148(init_server_components())[0x562930bffbad]
      sql/mysqld.cc:5739(mysqld_main(int, char**))[0x562930c04aa2]
      

      Other values for innodb_checksum_algorithm are handled properly. As well no problem happens for strict_none without rest encryption.

      Attachments

        1. error.log
          5 kB
          Andrii Nikitin
        2. out
          2.03 MB
          Jan Lindström

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              anikitin Andrii Nikitin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.