storage/innobase/buf/buf0buf.cc
@@ -354,6 +354,15 @@ bool
 buf_page_decrypt_after_read(buf_page_t* bpage, fil_space_t* space)
 	MY_ATTRIBUTE((nonnull));
 
+/********************************************************************//**
+Mark a table with the specified space pointed by bpage->space corrupted.
+Also remove the bpage from LRU list.
+@param[in,out]		bpage			Block */
+static
+void
+buf_mark_space_corrupt(
+	buf_page_t*	bpage);
+
 /* prototypes for new functions added to ha_innodb.cc */
 trx_t* innobase_get_trx();
 
@@ -2526,17 +2535,26 @@ buf_zip_decompress(
 {
 	const byte*	frame = block->page.zip.data;
 	ulint		size = page_zip_get_size(&block->page.zip);
+	/* Space is not found if this function is called during IMPORT */
+	fil_space_t* space = fil_space_acquire_for_io(block->page.space);
+	const unsigned key_version = mach_read_from_4(frame +
+			FIL_PAGE_FILE_FLUSH_LSN_OR_KEY_VERSION);
+	fil_space_crypt_t* crypt_data = space ? space->crypt_data : NULL;
+	const bool encrypted = crypt_data
+				&& crypt_data->type != CRYPT_SCHEME_UNENCRYPTED
+				&& (!crypt_data->is_default_encryption()
+					|| srv_encrypt_tables);
 
 	ut_ad(buf_block_get_zip_size(block));
 	ut_a(buf_block_get_space(block) != 0);
 
 	if (UNIV_UNLIKELY(check && !page_zip_verify_checksum(frame, size))) {
 
-		ut_print_timestamp(stderr);
-		fprintf(stderr,
-			"  InnoDB: compressed page checksum mismatch"
-			" (space %u page %u): stored: %lu, crc32: %lu "
-			"innodb: %lu, none: %lu\n",
+		ib_logf(IB_LOG_LEVEL_ERROR,
+			"Compressed page checksum mismatch"
+			" for %s [%u:%u]: stored: " ULINTPF ", crc32: " ULINTPF
+			" innodb: " ULINTPF ", none: " ULINTPF ".",
+			space ? space->chain.start->name : "N/A",
 			block->page.space, block->page.offset,
 			mach_read_from_4(frame + FIL_PAGE_SPACE_OR_CHKSUM),
 			page_zip_calc_checksum(frame, size,
@@ -2545,22 +2563,28 @@ buf_zip_decompress(
 					       SRV_CHECKSUM_ALGORITHM_INNODB),
 			page_zip_calc_checksum(frame, size,
 					       SRV_CHECKSUM_ALGORITHM_NONE));
-		return(FALSE);
+		goto err_exit;
 	}
 
 	switch (fil_page_get_type(frame)) {
-	case FIL_PAGE_INDEX:
+	case FIL_PAGE_INDEX: {
+
 		if (page_zip_decompress(&block->page.zip,
 					block->frame, TRUE)) {
+			if (space) {
+				fil_space_release_for_io(space);
+			}
 			return(TRUE);
 		}
 
-		fprintf(stderr,
-			"InnoDB: unable to decompress space %u page %u\n",
+		ib_logf(IB_LOG_LEVEL_ERROR,
+			"Unable to decompress space %s [%u:%u]",
+			space ? space->chain.start->name : "N/A",
 			block->page.space,
 			block->page.offset);
-		return(FALSE);
 
+		goto err_exit;
+	}
 	case FIL_PAGE_TYPE_ALLOCATED:
 	case FIL_PAGE_INODE:
 	case FIL_PAGE_IBUF_BITMAP:
@@ -2571,14 +2595,36 @@ buf_zip_decompress(
 		/* Copy to uncompressed storage. */
 		memcpy(block->frame, frame,
 		       buf_block_get_zip_size(block));
+
+		if (space) {
+			fil_space_release_for_io(space);
+		}
+
 		return(TRUE);
 	}
 
-	ut_print_timestamp(stderr);
-	fprintf(stderr,
-		"  InnoDB: unknown compressed page"
-		" type %lu\n",
-		fil_page_get_type(frame));
+	ib_logf(IB_LOG_LEVEL_ERROR,
+		"Unknown compressed page in %s [%u:%u]"
+		" type %s [" ULINTPF "].",
+		space ? space->chain.start->name : "N/A",
+		block->page.space, block->page.offset,
+		fil_get_page_type_name(fil_page_get_type(frame)), fil_page_get_type(frame));
+
+err_exit:
+	if (encrypted) {
+		ib_logf(IB_LOG_LEVEL_INFO,
+			"Row compressed page could be encrypted with key_version %u.",
+			key_version);
+		block->page.encrypted = true;
+		dict_set_encrypted_by_space(block->page.space);
+	} else {
+		dict_set_corrupted_by_space(block->page.space);
+	}
+
+	if (space) {
+		fil_space_release_for_io(space);
+	}
+
 	return(FALSE);
 }
 
@@ -3031,9 +3077,9 @@ loop:
 			}
 
 			ib_logf(IB_LOG_LEVEL_FATAL, "Unable"
-				" to read tablespace %lu page no"
-				" %lu into the buffer pool after"
-				" %lu attempts"
+				" to read tablespace " ULINTPF " page no "
+				ULINTPF " into the buffer pool after "
+				ULINTPF " attempts."
 				" The most probable cause"
 				" of this error may be that the"
 				" table has been corrupted."
@@ -3232,12 +3278,21 @@ got_block:
 		/* Decompress the page while not holding
 		buf_pool->mutex or block->mutex. */
 
-		/* Page checksum verification is already done when
-		the page is read from disk. Hence page checksum
-		verification is not necessary when decompressing the page. */
 		{
-			bool	success = buf_zip_decompress(block, FALSE);
-			ut_a(success);
+			bool	success = buf_zip_decompress(block, TRUE);
+
+			if (!success) {
+				buf_pool_mutex_enter(buf_pool);
+				buf_block_mutex_enter(fix_block);
+				buf_block_set_io_fix(fix_block, BUF_IO_NONE);
+				buf_block_mutex_exit(fix_block);
+
+				--buf_pool->n_pend_unzip;
+				buf_block_unfix(fix_block);
+				buf_pool_mutex_exit(buf_pool);
+				rw_lock_x_unlock(&fix_block->lock);
+				return NULL;
+			}
 		}
 
 		if (!recv_no_ibuf_operations) {
